2012-11-05 Viech
	* 20121105-1 :
	Updated dependencies.
	Linking binarys based on architecture isn't necessary anymore.

2012-09-02 Viech
	* 20120902-1 :
	Removed world read permissions from server config files, made them group-writeable.

2012-08-03 Viech
	* 20120803-1 :
	Adopted and rewrote package.