@@ -1,19 +1,18 @@
-# Maintainer: skeleton <tobiasgold at gmx .net>
+# Maintainer: Federico Cinelli <cinelli.federico@gmail.com> 
 pkgname=audacious-vumeter
-pkgver=1.0.0
+pkgver=1.0.1
 pkgrel=1
 pkgdesc="VU meter plugin for Audacious"
-realname=analog-vu-meter-plugin
+_realname=analog-vu-meter-plugin
 arch=('i686' 'x86_64')
 url="http://vumeterplugin.sourceforge.net/"
 license=('GPL')
 depends=('audacious')
-source=(http://downloads.sourceforge.net/project/vumeterplugin/Plugin%20for%20Audacious/${realname}-${pkgver}-beta.tar.gz)
-md5sums=('4decf7e60c50a894faa0342ead0e705d')
+source=("http://downloads.sourceforge.net/project/vumeterplugin/Plugin%20for%20Audacious/analog-vu-meter-plugin-1.0.1.tar.gz?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fvumeterplugin%2Ffiles%2Flatest%2Fdownload%3Fsource%3Dfiles&ts=1359503314&use_mirror=iweb")
+md5sums=('061ead5d0392951d9617de0f1fb9af7b')
 
 build() {
-  cd ${realname}-${pkgver}-beta
-  ./configure --prefix=/usr
-  make || return 1
-  make DESTDIR=$startdir/pkg install
+  cd $srcdir/$_realname-$pkgver
+  ./configure 
+  make -C "$srcdir/$_realname-$pkgver" PREFIX=/usr DESTDIR="$pkgdir" install
 }
