@@ -3,8 +3,8 @@
 # Contributor: Brice Carpentier <brice@daknet.org>
 
 pkgname=cairo-gl
-pkgver=1.12.8
-pkgrel=3
+pkgver=1.12.10
+pkgrel=1
 pkgdesc="Cairo vector graphics library with gl"
 arch=(i686 x86_64)
 license=('LGPL' 'MPL')
@@ -12,12 +12,12 @@ url="http://cairographics.org/"
 depends=('libpng' 'libxrender' 'libxext' 'fontconfig' 'pixman' 'glib2' 'sh')
 makedepends=('librsvg' 'poppler-glib' 'libspectre' 'gtk-doc') # 'libdrm')
 optdepends=('xcb-util: for XCB backend') # really needed?
-provides=('cairo=1.12.8')
+provides=('cairo=1.12.10')
 replaces=('cairo')
 conflicts=('cairo')
 options=('!libtool')
 source=(http://cairographics.org/releases/cairo-$pkgver.tar.xz)
-sha1sums=('56a10bf3b804367c97734d655c23a9f652d5c297')
+sha1sums=('be06d5aaa272bbbd08380f71ca710d5612881493')
 
 build() {
   cd "$srcdir/cairo-$pkgver"
