@@ -1,9 +1,10 @@
 # Contributor: Lex Black <autumn-wind at web dot de>
 # Contributor: bl4ckb1t <bl4ckb1t@gmail.com>
+# Contributor: Pio <xpio at tesla.rcub.bg.ac dot rs>
 
 pkgname=cboard
 pkgver=0.6.1
-pkgrel=2
+pkgrel=3
 pkgdesc="CBoard is an NCurses PGN browser, editor, and front end to chess engines that use the XBoard protocol." 
 arch=('i686' 'x86_64')
 url="http://sourceforge.net/projects/c-board/"
@@ -14,13 +15,12 @@ md5sums=('c987ae4089d7bc3e8a5b3d51482bb3ab')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
-  
   ./configure --prefix=/usr
+  sed '2192s/O_CREAT/O_CREAT, 0666/' -i libchess/pgn.c
   make
 }
 
 package() {
   cd $srcdir/$pkgname-$pkgver
-
   make DESTDIR=$pkgdir install
 }
