@@ -1,15 +1,15 @@
 # Maintainer: 6arms1leg <m.brnsfld {at} googlemail {d0t} com>
 # Contributor: Tom Wallroth <tomwallroth {at} gmail {d0t} com>
 pkgname=cherrymusic-devel-git
-pkgver=20121208
-pkgrel=6
+pkgver=20130130
+pkgrel=1
 pkgdesc="A standalone HTML5 (with Flash fallback) music streaming server based on CherryPy and jPlayer. Git devel-branch."
 arch=('any')
 url="http://fomori.org/cherrymusic"
 license=('GPL3')
 depends=('python>=3' 'python-cherrypy>=3')
 makedepends=('git' 'python')
-optdepends=('python3-stagger-svn' 'lame' 'vorbis-tools' 'flac' 'faad2' 'mpg123' 'ffmpeg')
+optdepends=('python3-stagger-svn' 'lame' 'vorbis-tools' 'flac' 'faad2' 'mpg123' 'ffmpeg' 'imagemagick')
 provides=('cherrymusic')
 conflicts=('cherrymusic')
 options=(!emptydirs)
