@@ -1,6 +1,6 @@
 #Maintainer: Xyne <ac xunilhcra enyx, backwards>
 pkgname=fipolate
-pkgver=2013.1
+pkgver=2013.1.29
 pkgrel=1
 pkgdesc='Interpolate text files with variables through a fifo via user prompts.'
 arch=(any)
@@ -8,16 +8,16 @@ license=(GPL)
 url="http://xyne.archlinux.ca/projects/fipolate"
 depends=(python3)
 source=(
-  http://xyne.archlinux.ca/projects/fipolate/src/fipolate-2013.1.tar.xz
-  http://xyne.archlinux.ca/projects/fipolate/src/fipolate-2013.1.tar.xz.sig
+  http://xyne.archlinux.ca/projects/fipolate/src/fipolate-2013.1.29.tar.xz
+  http://xyne.archlinux.ca/projects/fipolate/src/fipolate-2013.1.29.tar.xz.sig
 )
 sha512sums=(
-  d08f5847fcc01bc48ed45ce8a73474a96660ff5f2d5e3fa551aa42f72f9083e6c31bb08c109e4395afb7197d35e42c3098650fab7fb596ff336a2b98111a48a2
-  ba21c6e1d55c8c8133687936591b0f653cc04e6a2088454747ccb64e0701c8533c15cdaa480d12005da83d437ee67ca1c2dbbad6fb44989aca0457e0dee2e1e7
+  ecb2b0f2e193618d5e4de7bfe0bb3271a87401d69ec0b77d6ce1bb6bb703eab2480125e2a945bb1e324370a07ea31e99c3a883bce5b7c841209de14272e0e5f2
+  bc7234c4b3546aa8b3623860fcb7c605c5ad075a49fd9670fbd074b9ed7a222514e276816829ff5107b435ba299d3408321d088dec2ee25448fdc104b53e5182
 )
 md5sums=(
-  5d430b48c9b4a91b10eebdb6d353b531
-  40c75fc6a7adf12015e4fe690aed05fd
+  ba124c7e83f9730e05bf737e41d8c44c
+  aea2a5a72ddd7cab3e3038d150f7ebca
 )
 
 build ()
