@@ -3,8 +3,8 @@
 
 pkgname=geogebra-svn
 _realname=geogebra
-pkgver=18574
-_realver=4.9.19.0
+pkgver=23296
+_realver=4.9.97.0
 pkgrel=1
 pkgdesc="Dynamic mathematics software with interactive graphics, algebra and spreadsheet - SVN version"
 arch=('i686' 'x86_64')
@@ -19,8 +19,10 @@ optdepends=('geogebra-thumbnail-kde: KDE thumbnailer for GeoGebra')
 install="${_realname}.install"
 provides=('geogebra' 'geogebra-beta' 'geogebra42-beta' 'geogebra5-beta')
 conflicts=('geogebra' 'geogebra-beta' 'geogebra42-beta' 'geogebra5-beta')
+source=("geogebra.sh")
+md5sums=('2f87f90d8047eeda6886bcb6a8ba3d9b')
 
-_svntrunk="http://dev.geogebra.org/svn/trunk/${_realname}"
+_svntrunk="http://dev.geogebra.org/svn/trunk"
 _svnmod="${_realname}"
 
 build() {
@@ -40,36 +42,21 @@ build() {
 
   msg "Starting make..."
 
-    # Downloading JOGL1
-  cd $srcdir/$_svnmod-build/jogl1
-  ant -f kickstart.xml
-
-    # Downloading JOGL2
-  cd $srcdir/$_svnmod-build/jogl2
-  ant -f kickstart.xml
-
-    # Downloading external libraries
-  cd $srcdir/$_svnmod-build/desktop
-  ant -f kickstart.xml geogebra5-packager-commandline
-
-    # Build!
-  cd scripts/autobuild
-  ./make-vanilla-jars -tu
+  cd $srcdir/$_svnmod-build/tools/build/platforms/desktop/jogl2
+  ./1-compile
 }
 
 package() {
     # Installing application
-  cd $srcdir/$_svnmod-build/desktop/build
+  cd $srcdir/$_svnmod-build/geogebra/desktop/build
   install -dm755 $pkgdir/usr/share/java/$_realname
   install -Dm644 * $pkgdir/usr/share/java/$_realname
 
     # Installing launcher
-  install -dm755 $pkgdir/usr/bin
-  sed -e "1 s:h:h\n\n\GG_PATH='/usr/share/java/geogebra'\n:" $srcdir/$_svnmod-build/desktop/scripts/autobuild/linux/geogebra > $pkgdir/usr/bin/$_realname
-  chmod 755 $pkgdir/usr/bin/$_realname
+  install -Dm755 $srcdir/$_realname.sh $pkgdir/usr/bin/$_realname
 
     # Installing icons
-  cd $srcdir/$_svnmod-build/desktop/icons/hicolor
+  cd $srcdir/$_svnmod-build/geogebra/desktop/icons/hicolor
   for i in *; do
     install -dm755 $pkgdir/usr/share/icons/hicolor/$i/{apps,mimetypes}
     install -Dm644 $i/apps/* $pkgdir/usr/share/icons/hicolor/$i/apps
@@ -77,11 +64,11 @@ package() {
   done
 
     # Installing menu item
-  install -Dm644 $srcdir/$_svnmod-build/desktop/scripts/autobuild/linux/generic/$_realname.desktop $pkgdir/usr/share/applications/$_realname.desktop
+  install -Dm644 $srcdir/$_svnmod-build/geogebra/desktop/scripts/autobuild/linux/generic/$_realname.desktop $pkgdir/usr/share/applications/$_realname.desktop
 
     # Installing mimetype
-  install -Dm644 $srcdir/$_svnmod-build/desktop/scripts/autobuild/linux/generic/$_realname.xml $pkgdir/usr/share/mime/packages/$_realname.xml
+  install -Dm644 $srcdir/$_svnmod-build/geogebra/desktop/scripts/autobuild/linux/generic/$_realname.xml $pkgdir/usr/share/mime/packages/$_realname.xml
 
     # Installing license
-  install -Dm644 $srcdir/$_svnmod-build/desktop/_LICENSE.txt $pkgdir/usr/share/licenses/$_realname/LICENSE
+  install -Dm644 $srcdir/$_svnmod-build/geogebra/desktop/installer/LICENSE.txt $pkgdir/usr/share/licenses/$_realname/LICENSE
 }
