@@ -1,8 +1,9 @@
-# Maintainer: Gergely Imreh <imrehgATgmailDOTcom>
+# Maintainer: James Tappin <jtappinatgmaildotcom>
+# Contributor: Gergely Imreh <imrehgATgmailDOTcom>
 # Contributor: Eric Belanger <eric@archlinux.org>
 pkgname=plplot
 pkgver=5.9.9
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform software package for creating scientific plots"
 arch=('i686' 'x86_64')
 url="http://plplot.sourceforge.net/"
@@ -19,13 +20,30 @@ optdepends=('qhull: calculating convex hulls'
             'ttf-freefont: enables use of ttf fonts for some drivers'
             'cairo: displays plots and save to different file formats')
 options=('!libtool' '!makeflags')
-source=(http://downloads.sourceforge.net/sourceforge/plplot/${pkgname}-${pkgver}.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/plplot/${pkgname}-${pkgver}.tar.gz
+    deprecated_tcl.patch)
+
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  cmake -DCMAKE_INSTALL_PREFIX=/usr -DENABLE_octave=off -DENABLE_tcl=ON -DENABLE_tk=ON \
-    -DPL_FREETYPE_FONT_PATH=/usr/share/fonts/TTF || return 1
-  make || return 1
-  make DESTDIR=${pkgdir} install
-  install -D -m644 Copyright ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  patch -Np0 -i ${srcdir}/deprecated_tcl.patch
+
+  if [ -d build ]; then
+      rm -r build
+  fi
+  mkdir build
+  cd build
+  cmake -DCMAKE_INSTALL_PREFIX=/usr \
+      -DENABLE_octave=off \
+      -DENABLE_tcl=ON \
+      -DENABLE_tk=ON \
+      -DPL_FREETYPE_FONT_PATH=/usr/share/fonts/TTF ..
+  make 
 }
-md5sums=('9f2c8536a58875d97ab6b29bbed67d26')
+
+package() {
+    cd ${srcdir}/${pkgname}-${pkgver}/build
+    make DESTDIR=${pkgdir} install
+    install -D -m644 ../Copyright ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+}
+md5sums=('9f2c8536a58875d97ab6b29bbed67d26'
+         '0fdc8f4f8cc0eb13dc88cac873f18c5d')
