@@ -1,0 +1,40 @@
+*** ./drivers/CMakeLists.txt~	2011-10-12 18:43:01.000000000 -0600
+--- ./drivers/CMakeLists.txt	2013-01-29 16:45:33.535219104 -0700
+***************
+*** 19,24 ****
+--- 19,26 ----
+  # along with PLplot; if not, write to the Free Software
+  # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
+  
++ add_definitions("-DUSE_INTERP_RESULT")
++ 
+  install(
+    FILES README.drivers README.wxwidgets 
+    DESTINATION ${DOC_DIR}
+*** ./bindings/tk/CMakeLists.txt~	2013-01-29 16:54:36.655232031 -0700
+--- ./bindings/tk/CMakeLists.txt	2013-01-29 16:46:42.951887423 -0700
+***************
+*** 20,25 ****
+--- 20,27 ----
+  
+  if(ENABLE_tk)
+  
++   add_definitions("-DUSE_INTERP_RESULT")
++ 
+    set(include_INSTALLED_HEADERS
+      pltk.h
+      )
+*** ./bindings/tcl/CMakeLists.txt~	2011-10-12 18:43:01.000000000 -0600
+--- ./bindings/tcl/CMakeLists.txt	2013-01-29 16:47:50.151889022 -0700
+***************
+*** 20,25 ****
+--- 20,28 ----
+  
+  if(ENABLE_tcl)
+  
++   # WARNING, the -DTcl_Import_TCL_DECLARED ought to be automatic
++   add_definitions("-DUSE_INTERP_RESULT -DTcl_Import_TCL_DECLARED")
++ 
+    # Check consistency of plplot_parameters.h.
+    add_custom_target(
+      check_tcl_parameters
