@@ -1,0 +1,2 @@
+#!/bin/bash
+cd '/usr/share/polly-b-gone/' && ./polly-b-gone
