@@ -1,8 +1,8 @@
 # Maintainer: Andrey Mikhaylenko <neithere at gmail dot com>
 # Contributor: Fabien Devaux <fdev31 at gmail dot com>
 pkgname=python-argh
-pkgver=0.22.0
-pkgrel=2       # XXX don't forget to reset on version change
+pkgver=0.23.0
+pkgrel=1       # XXX don't forget to reset on version change
 pkgdesc="An unobtrusive argparse wrapper with natural syntax"
 arch=(any)
 url="http://bitbucket.org/neithere/argh/"
@@ -19,7 +19,7 @@ backup=()
 options=(!emptydirs)
 install=
 source=(http://pypi.python.org/packages/source/a/argh/argh-${pkgver}.tar.gz)
-md5sums=('bc49bef9e7928e845cf37455860bbe03')
+md5sums=('651dd0acbb474a711dac8c2e79fd2aa8')
 
 build() {
    cd "${srcdir}/argh-${pkgver}"
