@@ -1,6 +1,6 @@
 #Maintainer: Xyne <ac xunilhcra enyx, backwards>
 pkgname=svn-export
-pkgver=2013.1.25
+pkgver=2013.1.30
 pkgrel=1
 pkgdesc='An svn export emulator with support for incremental exports.'
 arch=(any)
@@ -8,16 +8,16 @@ license=(GPL)
 url="http://xyne.archlinux.ca/projects/svn-export"
 depends=(python3 subversion)
 source=(
-  http://xyne.archlinux.ca/projects/svn-export/src/svn-export-2013.1.25.tar.xz
-  http://xyne.archlinux.ca/projects/svn-export/src/svn-export-2013.1.25.tar.xz.sig
+  http://xyne.archlinux.ca/projects/svn-export/src/svn-export-2013.1.30.tar.xz
+  http://xyne.archlinux.ca/projects/svn-export/src/svn-export-2013.1.30.tar.xz.sig
 )
 sha512sums=(
-  6829a7c21c57e932659c727e29f8adfc6304250c9a7935bf0c38ad5bbe3b0864f6403d73d7cc683cec13cefe0c4b3307ba6ca675ac0733c8d9b101a13aacde07
-  7ea06e61ef20f28c82f869d8f0c30cfd5f54fb4578a25f6305ed1ad2a7af32c06bab0c2bd2d2f3c1248ecf4574aff1771747fae01b527388d6328c769383f1d5
+  c1ff3781fa3200528699203c8fa01c6b84655e95ef75163ebbaab21bf5918021eaddf8a12ddeac469633e74d77be47a399f73198624f6188e1a266d6737af37c
+  8738895565b795bd0878a22355a3000805b237aa0aaba4dd74caf57f8b187e7b928c9b82a6f047ab134c8ae520bb222e6e0ac7533c46282229fdfa5866fc60a0
 )
 md5sums=(
-  20861018f234086cf878580ee83250d8
-  e3facf56cfb2155fa19d66be6837bdd7
+  9ae1866e3197590ac0f288d3da3cc144
+  0f8e33e1505b8a3c04b2a34123ace4bb
 )
 
 build () 
