@@ -1,8 +1,11 @@
 # Maintainer: Viech
 # Contributor: Martin F. Schumann <mfs@mfs.name>
 
+# Change this to the branch/tag you want to build (e.g. bots)
+_branch=master
+
 pkgname=unvanquished-git
-pkgver=20121203
+pkgver=20130130
 pkgrel=1
 pkgdesc="A team-based fps/rts hybrid game which pits aliens against humans. Bleeding edge version that might be too new for official servers."
 arch=('x86_64' 'i686')
@@ -16,15 +19,16 @@ options=('emptydirs')
 backup=('srv/unvanquished/main/server.cfg' 'srv/unvanquished/main/maprotation.cfg')
 changelog='ChangeLog'
 install='unvanquished.install'
-source=('unvanquished.install' 'unvanquished.sh' 'unvanquished-server.sh' 'unvanquished-update-paks.sh' 'unvanquished-rc.sh' 'unvanquished.desktop' 'ChangeLog')
+source=('unvanquished.install' 'unvanquished.sh' 'unvanquished-server.sh' 'unvanquished-update-paks.sh' 'unvanquished-rc.sh' 'unvanquished.service' 'unvanquished.desktop' 'ChangeLog')
 
 md5sums=('106ef331d5889bff18fe099b2e7bbcf8'
          '09ed4b00045453b68a0a6fda07299b0e'
          'b47705a01575c2c1c2ef7bb4a5bcf8d7'
          '1da9acdc7e8f83610dd6398ba2b38e72'
          '759173428e2d8686d2bb840a9948fb8b'
+         '4564407589ea88cb85ed320cd427c0ee'
          'ac69d49b3c665d274d0ab58870220522'
-         '7329a91bb8c14ab1e93008a1da4e6ab5')
+         '441e864b81a31ffea0346de181d2c91f')
 
 _name=unvanquished
 
@@ -40,10 +44,17 @@ build() {
 	if [[ -d $_name ]]; then
 		msg "Updating local files ..."
 		cd $_name
-		git pull
+		git fetch -t
+		git checkout $_branch
+		git merge --ff-only origin/$_branch || true
 	else
 		msg "Cloning repository ..."
 		git clone $_gitroot $_name
+		if [[ $_branch != "master" ]]; then
+			 msg "Checking out $_branch ..."
+			cd $_name
+			git checkout $_branch
+		fi
 	fi
 
 	msg "The local files are up to date."
@@ -57,7 +68,7 @@ package() {
 	# create installation dirs
 	cd $pkgdir
 
-	install -d opt/$_name usr/bin etc/rc.d usr/share/applications var/cache/$_name/update-paks
+	install -d opt/$_name usr/bin etc/rc.d usr/share/applications var/cache/$_name/update-paks usr/lib/systemd/system
 	install -dm 775 srv/$_name/main
 
 	# install starters
@@ -67,6 +78,7 @@ package() {
 	install -m 755 $_name-server.sh $pkgdir/usr/bin/$_name-server
 	install -m 755 $_name-update-paks.sh $pkgdir/usr/bin/$_name-update-paks
 	install -m 755 $_name-rc.sh $pkgdir/etc/rc.d/$_name
+	install -m 644 $_name.service $pkgdir/usr/lib/systemd/system/
 	install -m 644 $_name.desktop $pkgdir/usr/share/applications/
 	
 	# install base files
