@@ -1,0 +1,12 @@
+[Unit]
+Description=Unvanquished Dedicated Server
+After=network.target
+
+[Service]
+Type=forking
+User=unvanquished
+Group=unvanquished
+ExecStart=/usr/bin/unvanquished-server +set dedicated 1 +exec server.cfg
+
+[Install]
+WantedBy=multi-user.target
