@@ -1,3 +1,7 @@
+2013-29-01 Viech
+	* 20130129-1 :
+	Added systemd service file.
+
 2012-11-05 Viech
 	* 20121105-1 :
 	Updated dependencies.
